# template

./: .gitignore  .xlings.json  CMakeLists.txt  LICENSE  README.md  cmake_import_std_uuids.json  mcpp.toml  xmake.lua
.agents/skills/: README.md
.agents/skills/mcpp-style-ref/: SKILL.md
.agents/skills/more-details/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
examples/: basic.cpp  xmake.lua
examples/basic/: mcpp.toml
examples/basic/src/: main.cpp
src/: mylib.cppm  templates.cppm
tests/: CMakeLists.txt  main.cpp  mylib_test.cpp  xmake.lua
tests/main/: CMakeLists.txt  xmake.lua
